--- a/src/app/component/pet-list/pet-list.component.html
+++ b/src/app/component/pet-list/pet-list.component.html
@@ -1,14 +1,14 @@
 <div class="home-container">
-    <h1>Welcome to Pet Lovers</h1>
-    <div class="pet-cards-container">
-      <div *ngFor="let pet of pets" class="pet-card" (click)="navigateToPetDetails(pet.id)">
-        <img [src]="pet.imageUrls[0]" alt="{{ pet.name }}" class="pet-image"/>
-        <div class="pet-info">
-          <h2>{{ pet.name }}</h2>
-          <p>{{ pet.description }}</p>
-          <button class="adopt-btn">Adopt Me</button>
-        </div>
+  <h1>Welcome to Pet Lovers</h1>
+  <div class="pet-cards-container">
+    <div *ngFor="let pet of pets" class="pet-card" (click)="navigateToPetDetails(pet.id)">
+      <img [src]= "apiURL + pet.imageUrls[0]" alt="{{ pet.name }}" class="pet-image"/>
+      <div class="pet-info">
+        <h2>{{ pet.name }}</h2>
+        <p>{{ pet.description }}</p>
+        <h2>{{pet.owner.name}}</h2>
+        <button class="adopt-btn">Adopt Me</button>
       </div>
     </div>
   </div>
-  
+</div>
