--- a/src/app/component/landing/landing.component.html
+++ b/src/app/component/landing/landing.component.html
@@ -1,5 +1,5 @@
 <div class="video-background">
-  <video autoplay  loop playsinline="background.mp4">
+  <video class="video-background" autoplay loop muted playsinline>
     <source src="background.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
