--- a/src/app/component/pet-list/pet-list.component.html
+++ b/src/app/component/pet-list/pet-list.component.html
@@ -6,7 +6,7 @@
       <div class="pet-info">
         <h2>{{ pet.name }}</h2>
         <p>{{ pet.description }}</p>
-        <h2>{{pet.owner.name}}</h2>
+        <h3>Owner: {{pet.owner.name}}</h3>
         <button class="adopt-btn">Adopt Me</button>
       </div>
     </div>
